--- a/index.html
+++ b/index.html
@@ -3,118 +3,38 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Mein Lebenslauf</title>
+    <title>Geburtstag Louis</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <h1>Louis Roser</h1>
-    <img src="Bilder/20231026_123312 (1).jpeg" alt="Profilfoto" height="200"/><br>
-    <a href="https://ch.linkedin.com/in/louis-roser-076b152a1">Jetzt kontaktieren</a>
-    <h2>Aktuelles Projekt:</h2>
-    <ul>
-        <li>Schulung "The Complete 2024 Web Development Bootcamp"</li>
-    </ul>
-    <hr>
-    <h2>Beruflicher Werdegang:</h2>
-    <p>2022-2023
-    <ul>
-        <li><h4>Allrounder bei Autoparts63 / Astrid Schäfer Immobilien:</h4>
-            <ul>
-                <li>Überarbeitung Onlineshop, Stammdatenpflege, Internationales Logistik und Versandwesen, Rechnungsstellung</li>
-                <li>Kundenbetreuung via E-Mail und Telefon</li>
-                <li>Montage und Einbau von Fahrzeugausstattung</li>
-                <li>Terminkoordination und Wohnungsbesichtigungen</li>
-                <li>Einpflegen und Erstellung von Immobilieninseraten</li>
-            </ul>
-        </li>
-    </ul>
+    <h1 style="color: red;">Einladung zu meinem Geburtstag!</h1>
+    <h3>Noch vier Jahre dann gehöre ich auch zu den Oldtimern :)</h3>
+    <hr />
+    <img src="IMG/Bildschirmfoto 2024-03-08 um 08.57.28.png" height="250" alt="Zahl 26" />
+    <p><h3>Hiermit lade ich dich herzlich zu meinem Geburtstag ein.</h3>
+        <h5>
+            <li>Den Tag kennst du ;)</li>
+            <li>Wann: ab 13 Uhr</li>
+            <li>Wo: Bei mir in Kreuzlingen</li>
+        </h5>
+        Es gibt Flammkuchen und Salat zum Mittagessen. <br>
+        Gegen Nachmittag folgt dann Kaffe und Kuchen.
     </p>
-
-    <p>2020-2022
-        <ul>
-            <li><h4>Customer Service Representative B2B / Key Account Sales Coordinator bei BLACKROLL AG:</h4>
-                <ul>
-                    <li>Kundenbetreuung B2C, B2B und Key Accounts</li>
-                    <li>Angebotserstellung und Ordermanagement</li>
-                    <li>Stammdatenpflege und Prozessintegration</li>
-                    <li>Erstkontakt der Neukunden</li>
-                    <li>Abstimmung mit Logistikunternehmen und Produzenten</li>
-                </ul>
-            </li>
-        </ul>
+    <h4 style="color: green;">Geb mir bitte vorab kurz per Whatsapp Bescheid ob du kommst.</h4>
+    <p>Ich freue mich auf dich!
     </p>
-
-    <p>2015-2016
-        <ul>
-            <li> <h4>Freiwilliges soziales Jahr (FSJ) im Klinikum Konstanz:</h4>
-                <ul>
-                    <li>Verbrauchsmaterialbestellung</li>
-                    <li>Patientenbetreuung</li>
-                    <li>Unterstützende Tätigkeiten des Fachpersonals</li>
-                    <li>Seminare zur Weiterbildung und Sozialer Arbeit</li>
-                </ul>
-            </li>
-        </ul>
+    <img src="IMG/WhatsApp Image 2024-03-08 at 09.19.14.jpeg" alt="Kinder" height="400" />
+    <img src="IMG/WhatsApp GIF 2024-03-08 at 09.22.42.gif" alt="Wunderkerzen" height="400" /> <br>
+    <hr />
+    <p><h3>PS: falls du dich jetzt fragst was das für eine Komische Website ist... so sieht der Code dahinter aus:</h3>
+        <img src="IMG/Bildschirmfoto 2024-03-08 um 09.50.19.png" alt="code webiste" height="450" />
+    
     </p>
-
-    <p>Praktika:
-        <ul>
-            <li>BMW Auer: Werkstatttätigkeiten sowie Abteilung für Verkaufsberatung inkl. Verkaufsgespräche</li>
-            <li>Motorradtechnik-Latscha: Reparaturen, Instandsetzung Fahrzeug- / Motorrevisionen</li>
-            <li>Holz-und Gerüstbau Tritschler: Schreinerei und Gerüstbau</li>
-        </ul>
-    </p>
-<hr>
-
-<h2>Schulischer Werdegang / Ausbildung:</h2>
-<p>
-    2016-2019
-    <ul>
-        <li>Ausbildung zum Bankkaufmann bei der Bezirkssparkasse Reichenau</li>
-    </ul>
-</p>
-
-<p>2010-2015
-    <ul>
-        <li>Theodor-Heuss-Realschule Konstanz, Sekundarschule</li>
-    </ul>
-</p>
-
-<p>2008-2010
-    <ul>
-        <li>ISKK (International School Konstanz/Kreuzlingen)</li>
-    </ul>
-</p>
-<hr>
-
-<h2>Fertigkeiten:</h2>
-<p>
-    <ul>
-        <li>Englisch (B2)</li>
-        <li>gute Microsoft Office und MyFactory Kenntnisse</li>
-        <li>sehr gutes technisches Verständnis</li>
-        <li>flexibel und vielseitig einsetzbar</li>
-        <li>Lösungsorientierte Arbeitsweise</li>
-        <li>Visual Studio HTML code</li>
-    </ul>
-</p>
-<hr>
-
-<h2>Sonstiges:</h2>
-<p>
-    <ul>
-        <li>Wandern, Squash, Tauchen, Sportschütze, Motorradfahren (Führerscheinklassen: A, B)</li>
-    </ul>
-</p>
-
 </body>
 
-<br>
 <hr>
-
-<footer>
-    <p>Copyright © 2024 Louis Roser. All Rights Reserved.</p>
-</footer>
+<footer> Copyright 2024 Louis Roser</footer>
 
 </html>
+
